# doxygen-mcp

./: .dockerignore  .gitattributes  .gitignore  .jclaw.yml  .pylintrc  AGENTS.md  AGENTS.original.md  AUTHORS.md  BUGS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Doxyfile  GEMINI.md  README-DOCKER.md  README.md  TROUBLESHOOTING.md  USING.md  benchmark.py  check_environment.py  di_report.md  di_report.txt  doxygen_mcp.json  gemini-extension.json  jclaw  launch-inspector.ps1  missing_docs_report.md  package-lock.json  package.json  pyproject.toml  server.py
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
.jules/backlog/: ARCH-01-full-overhaul.md  TEMPLATE-tier-01.01-slug.md
commands/: doxygen.toml
docs/html/: classserver_1_1_doxygen_config.html  inherits.html
docs/specs/: Codebase_Investigator_Specification.md
examples/cpp_sample/: .gitignore  README.md
mock_modules/lxml/: __init__.py
mock_modules/lxml/etree/: __init__.py
mock_modules/mcp/: __init__.py
mock_modules/mcp/server/: __init__.py  fastmcp.py
mock_modules/pydantic/: __init__.py
scripts/: analyze_di.py  analyze_docs.py  benchmark_funnel.py  check_environment.py  configure_client.py  docker-mcp-start.ps1  install.bat  install_hooks.py  pre_release_check.py  run-mcp.ps1  run-mcp.sh  run.sh  setup.ps1  setup.sh  test_cross_project.sh  verify_changes.py
skills/doxygen_investigation/: SKILL.md
src/doxygen_mcp/: __init__.py  __main__.py  auditor.py  caveman.py  config.py  funnel.py  git_tracker.py  query_engine.py  reporter.py  search.py  server.py  types.py  utils.py
templates/: standard.doxyfile
templates/hooks/: Doxyfile.fast.template  pre-commit.ps1.template  pre-commit.sh.template  pre-push.ps1.template  pre-push.sh.template
tests/: conftest.py  test_auditor.py  test_caveman.py  test_config.py  test_detect_language.py  test_doxy_context.py  test_env_config.py  test_funnel.py  test_funnel_security.py  test_generate_config.py  test_get_active_context.py  test_get_context_info.py  test_get_ide_environment.py  test_get_project_name.py  test_git_tracker.py  test_improvements.py  test_initialize_project_sync.py  test_main.py  test_mcp_result_wrapper.py  test_query_engine.py  test_refresh_index.py  test_resolve_path.py  test_search.py  test_security_config.py  test_security_doxygen_path.py  test_security_ignore.py  test_security_path_resolution.py  test_security_symlink.py  test_security_traversal.py  test_server.py  test_server_symlinks.py  test_surgical_improvements.py  test_symlink_security.py  test_token_efficient_tools.py
